<resources>
    <string name="app_name">CameraDetector</string>
    <string name="camera">Camera</string>
    <string name="enable">Enable</string>
    <string name="wifi_scanner">Wifi Scanner</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="useful_tips">Useful tips</string>
    <string name="tips_and_trick">Tips &amp; Trick</string>
    <string name="useful_trick">Useful tricks</string>
    <string name="version">Version</string>
    <string name="setting">Setting</string>
    <string name="the_best_rating_star">The best rating star</string>
    <string name="submit">Submit</string>
    <string name="no_thanks">No thanks</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission">Permission</string>
    <string name="start_detect">Start Detect</string>
    <string name="stop_detect">Stop Detect</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="needs_permission">Needs permission. Please enable it in Settings.</string>
    <string name="tips_for_you">Tips for you</string>
    <string name="please_remove_your_phonecase">Please remove your phonecase.</string>
    <string name="the_electric_field_sensors_are_in_this_position">The electric field sensors are in this position.</string>
    <string name="if_you_search_underwater_make_sure_your_phone_has_a_waterproof_device">If you search underwater make sure your phone has a waterproof device.</string>
    <string name="tip_1">Connect to a WIFI network, Open the App and Navigate to WIFI Scan.</string>
    <string name="tip_1_bluetooth">Turn on bluetooth on your device</string>
    <string name="tip_1_infrared">Turn off all the lights in the room and proceed to the next step.</string>
    <string name="tip_1_lens">Turn off all the lights in the room and proceed to the next step.</string>
    <string name="tip_1_magnetic">Please remove your phone case</string>
    <string name="tip_2">Tap “Scan” button and wait for results. The app will begin scanning for all nearby WIFI devices.</string>
    <string name="tip_2_bluetooth">Tap “Scan” button and wait for results. The app will begin scanning for all nearby Bluetooth devices.</string>
    <string name="tip_2_infrared">Grant camera access, then turn on the camera and select color</string>
    <string name="tip_2_lens">Grant camera access, then turn on the camera</string>
    <string name="tip_2_magnetic">Tap “Start Detect” button and bring your device to the place you want to scan. The app will begin scanning for all nearby Magnetic object.</string>
    <string name="tip_3">Tap “View Device” and check the list of suspicious devices.</string>
    <string name="tip_3_infrared">Point the camera or bring your phone close to suspicious locations with hidden cameras.</string>
    <string name="tip_3_lens">Point the camera or bring your phone close to suspicious locations with hidden cameras.</string>
    <string name="tip_3_magnetic">Turn on Camera, Vibration, Flash or Sound for easier detection</string>
    <string name="tip_4">Review Detected Devices: The app will list all devices connected to the network. Look for any unfamiliar or suspicious devices that might be hidden cameras.</string>
    <string name="tip_4_infrared">If there is a red light, it is likely a hidden camera device.</string>
    <string name="tip_4_lens">If there is a red circle, it is likely a hidden camera device.</string>
    <string name="tip_4_magnetic">Tap Pause to stop detect</string>

    <string name="trick_1">Visual Inspection: Look for unusual or out-of-place objects: Carefully inspect items like :</string>
    <string name="trick_bath_2">Check for two-way mirrors: Use the \"fingernail test\" to check for two-way mirrors. Place your fingernail against the mirror’s surface. If there is a gap between your finger and its reflection, it\'s likely a normal mirror. If there is no gap, it could be a two-way mirror with a camera behind it.</string>
    <string name="trick_bed_1">Visual Inspection: Carefully examine the room for any unusual object like:</string>
    <string name="trick_2">Use a Infrared Camera: Turn off the lights in the room and use infrared camera to scan the area. The camera lens might reflect light, making it easier to detect.</string>
    <string name="trick_3">Listen for Unusual Sounds: Listen for faint noises: Some cameras may emit faint noises, such as clicks or motor sounds when operating. Stay quiet and listen for anything unusual.</string>
    <string name="trick_4">Request a Security Check: If you suspect a hidden camera, you can request a security professional to inspect the room.</string>
    <string name="trick_living_2">Cameras can be disguised in everyday objects like alarm clocks, TV set-top boxes, or even inside light bulbs</string>

    <string name="how_to_use_bluetooth_scanner">How to use Bluetooth Scanner?</string>
    <string name="how_to_use_infrared_detection">How to use Infrared Detection?</string>
    <string name="how_to_use_lens_detection">How to use Lens Detection?</string>
    <string name="how_to_use_magnetic_scanner">How to use Magnetic Scanner?</string>
    <string name="how_to_use_wifi_scanner">How to use Wifi Scanner?</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedroom">Bedroom</string>
    <string name="changing_room">Changing room</string>
    <string name="living_room">Living room</string>
    <string name="electrical_outlet">Electrical outlet</string>
    <string name="small_lenses_or_holes">Small lenses or holes</string>
    <string name="smoke_detectors">Smoke Detectors</string>
    <string name="clocks">Clocks</string>
    <string name="clothes_hanger">Clothes Hanger</string>
    <string name="shower_head">Shower head</string>
    <string name="small_bottles">Small bottles</string>
    <string name="bookshelves">Bookshelves</string>
    <string name="plant_pot">Plant pot</string>
    <string name="picture_frames">Picture Frames</string>
</resources>