<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    android:padding="20dp">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needs_permission"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_open_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:text="@string/open_settings"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginHorizontal="60dp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
