<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <include
        layout="@layout/custom_toolbar_have_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="12dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar">
        <ScrollView
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/customToolbar"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/languageBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="start|center"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="@string/language">
                    </TextView>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/background">
                </ImageView>
                <LinearLayout
                    android:id="@+id/policyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="start|center"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy">
                    </TextView>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/background">
                </ImageView>
                <LinearLayout
                    android:id="@+id/rateAppBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="start|center"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="@string/rate_app">
                    </TextView>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/background">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="start|center"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="@string/version">
                    </TextView>
                    <TextView
                        android:id="@+id/versionTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:gravity="end"
                        android:layout_gravity="end|center"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="1.1.21058b">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>