<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-40dp"
    app:cardCornerRadius="25dp"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/custom_rating_star"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="-8dp"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/the_best_rating_star"
                    android:textSize="10sp">
                </TextView>
                <ImageView
                    android:id="@+id/tutorialArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_marginVertical="12dp"
                    android:src="@drawable/rate_tutorial"
                    android:layout_marginHorizontal="4dp">
                </ImageView>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12sp"
                android:background="@color/gray_soft"
                app:cardBackgroundColor="@color/gray_soft"
                app:cardCornerRadius="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="52dp"
                    android:layout_marginVertical="4dp"
                    android:textColor="@color/white"
                    android:text="@string/submit"
                    android:textSize="16sp">

                </TextView>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12sp"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp"
                app:cardCornerRadius="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="52dp"
                    android:layout_marginVertical="4dp"
                    android:textColor="@color/black"
                    android:text="@string/no_thanks"
                    android:textSize="16sp">

                </TextView>
            </androidx.cardview.widget.CardView>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"></FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>